--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jokeapi",
   "version": "1.0.0",
-  "description": "Example API build in native JavaScript displaying jokes from programming category  or Chuck Norris jokes from online API's",
+  "description": "Example API build in native JavaScript displaying jokes from programming category or Chuck Norris jokes from online API's",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
@@ -12,7 +12,7 @@
     "example"
   ],
   "author": "Marcin Szczepkowski",
-  "license": "GPL-2.0-or-later",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
